--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teste</title>
+  <title>Portfólio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -48,7 +48,7 @@
         </a>
 
         <div class="buttons">
-          <a href="https://github.com/" target="_blank" class="button is-dark ml-5">
+          <a href="https://github.com/Lucas-MFS" target="_blank" class="button is-dark ml-5">
             <span class="icon">
               <i class="fab fa-github"></i>
             </span>
@@ -73,14 +73,15 @@
                   Oi, meu nome é Lucas!
                 </h1>
                 <h2 class="subtitle">
-                  Desenvolvedor.
+                  
+Estudante de Sistemas de Informação com habilidades avançadas em programação (C e C#), edição de imagens (Photoshop) e produção de vídeos. Proficiente em inglês, capaz de colaborar globalmente. Compreensão de sistemas computacionais. Apaixonado por tecnologia e inovação, focado na entrega de projetos de qualidade.
                 </h2>
               </div>
               <div class="column">
                 <div class="card">
                   <div class="card-image">
                     <figure class="image is-4by3">
-                      <img src="img/perfil.png" alt="Placeholder image">
+                      <img src="img/perfil_2.png" alt="Placeholder image">
                     </figure>
                   </div>
                 </div>
@@ -250,10 +251,11 @@
                   </h3>
 
                   <p>
-                    Isso é uma descrição temporária sobre mim, não sei o que dizer sobre mim, não tenho muita coisa a dizer teste teste teste allalala<br> <br>
+                    
+Sou estudante de Sistemas de Informação e destaco-me em programação, especialmente em C e C#. Tenho habilidades em edição de imagens no Photoshop e na edição de vídeos. Com proficiência em inglês, posso colaborar efetivamente em ambientes globais. Além disso, compreendo bem sistemas computacionais, o que me permite lidar com desafios de hardware e software. Minha paixão pela tecnologia e inovação se reflete em projetos de alta qualidade que entrego com dedicação.<br> <br>
                   </p>
                   <br>
-                  <blockquote> "shimona- Michael Jackson" </blockquote>
+                  <blockquote>  </blockquote>
                 </div>
 
                 <footer class="card-footer">
