--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Estudante de Sistemas de Informação com habilidades avançadas em programaçã
                 <div class="card">
                   <div class="card-image">
                     <figure class="image is-4by3">
-                      <img src="img/perfil_2.png" alt="Placeholder image">
+                      <img src="img/perfil.png" alt="Placeholder image">
                     </figure>
                   </div>
                 </div>
