--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </h1>
                 <h2 class="subtitle">
                   
-Estudante de Sistemas de Informação com habilidades avançadas em programação (C e C#), edição de imagens (Photoshop) e produção de vídeos. Proficiente em inglês, capaz de colaborar globalmente. Compreensão de sistemas computacionais. Apaixonado por tecnologia e inovação, focado na entrega de projetos de qualidade.
+Estudante de Sistemas de Informação com habilidades avançadas em programação (C e C#), edição de imagens (Photoshop) e produção de vídeos. Proficiente em inglês.
                 </h2>
               </div>
               <div class="column">
