--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Sou estudante de Sistemas de Informação e destaco-me em programação, especia
               <div class="card">
                 <div class="card-image">
                   <figure class="image is-4by3">
-                    <img src="" alt="Placeholder image">
+                    <img src="perfil_2.png" alt="Placeholder image">
                   </figure>
                 </div>
               </div>
