--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Sou estudante de Sistemas de Informação e destaco-me em programação, especia
 
                   <p class="card-footer-item">
                     <span>
-                      <a href="#"><span class="icon">
+                      <a href="https://www.instagram.com/caslu.mfs/"><span class="icon">
                           <i class="fab fa-instagram"></i>
                         </span></a>
                     </span>
@@ -270,7 +270,7 @@ Sou estudante de Sistemas de Informação e destaco-me em programação, especia
 
                   <p class="card-footer-item">
                     <span>
-                      <a href="#"><span class="icon">
+                      <a href="https://www.linkedin.com/in/lucas-medeiros-figueiredo-dos-santos-98144220a/"><span class="icon">
                           <i class="fab fa-linkedin"></i>
                         </span></a>
                     </span>
