--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Estudante de Sistemas de Informação com habilidades avançadas em programaçã
 
                   <p>
                     
-Sou estudante de Sistemas de Informação e destaco-me em programação, especialmente em C e C#. Tenho habilidades em edição de imagens no Photoshop e na edição de vídeos. Com proficiência em inglês, posso colaborar efetivamente em ambientes globais. Além disso, compreendo bem sistemas computacionais, o que me permite lidar com desafios de hardware e software. Minha paixão pela tecnologia e inovação se reflete em projetos de alta qualidade que entrego com dedicação.<br> <br>
+Sou estudante de Sistemas de Informação e destaco-me em programação, especialmente em C e C#. Tenho habilidades em edição de imagens no Photoshop e na edição de vídeos. Com proficiência em inglês. Além disso, compreendo bem sistemas computacionais, lido bem com software. Com minha paixão em tecnologia, consigo entregar produtos de qualidade.<br> <br>
                   </p>
                   <br>
                   <blockquote>  </blockquote>
